href for photos and roster

--- a/photos.html
+++ b/photos.html
@@ -33,9 +33,9 @@
     <section class="title">
         <h2 class="section-title">Photos</h2>
         <div class="category">
-            <span onclick="renderPhotos(wb22)">Winter Bushwhack 2022</span>
-            <span onclick="renderPhotos(rlfa22)">Real Life First Aid 2022</span>
-            <span onclick="renderPhotos(fwlm22)">Fish & Wildlife Management 2022</span>
+            <a href="#gallery" onclick="renderPhotos(wb22)">Winter Bushwhack 2022</a>
+            <a href="#gallery" onclick="renderPhotos(rlfa22)">Real Life First Aid 2022</a>
+            <a href="#gallery" onclick="renderPhotos(fwlm22)">Fish & Wildlife Management 2022</a>
         </div>
     </section>
     <section class="main">
