--- a/troop-roster.html
+++ b/troop-roster.html
@@ -19,7 +19,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         </div>
         <div id="main">
-            <span onclick="openNav()">&#9776;</span>
+            <a onclick="openNav()">&#9776;</a>
         </div>
         <div class="header">
             <h1>Troop 586</h1>
@@ -31,18 +31,18 @@
     <section class="title">
         <h2 class="section-title">Troop Roster</h2>
         <div class="category">
-            <span onclick="createCards(key3)">Key 3</span>
-            <span onclick="createCards(seniorPatrol)">SPL & ASPL</span>
-            <span onclick="createCards(pheonix)">Pheonix Patrol</span>
-            <span onclick="createCards(banananadana)">Banananadana's Patrol</span>
-            <span onclick="createCards(infernos)">Infernos Patrol</span>
-            <span onclick="createCards(wetBandits)">Wet Bandits Patrol</span>
-            <span onclick="createCards(underdogs)">Underdogs Patrol</span>
-            <span onclick="createCards(scoutMasters)">Assistant Scoutmasters</span>
-            <span onclick="createCards(committee)">Committee Members</span>
+            <a href="#cards" onclick="createCards(key3)">Key 3</a>
+            <a href="#cards" onclick="createCards(seniorPatrol)">SPL & ASPL</a>
+            <a href="#cards" onclick="createCards(pheonix)">Pheonix Patrol</a>
+            <a href="#cards" onclick="createCards(banananadana)">Banananadana's Patrol</a>
+            <a href="#cards" onclick="createCards(infernos)">Infernos Patrol</a>
+            <a href="#cards" onclick="createCards(wetBandits)">Wet Bandits Patrol</a>
+            <a href="#cards" onclick="createCards(underdogs)">Underdogs Patrol</a>
+            <a href="#cards" onclick="createCards(scoutMasters)">Assistant Scoutmasters</a>
+            <a href="#cards" onclick="createCards(committee)">Committee Members</a>
         </div>
     </section>
-    <div class="cards"></div>
+    <div class="cards" id="cards"></div>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
