--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Troop 586 Homepage</title>
-        <meta name="v
-        iewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
