back to top button

--- a/photos.html
+++ b/photos.html
@@ -41,6 +41,7 @@
     <section class="main">
         <div class="gallery" id="gallery"></div>       
     </section>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">&#129129;</button>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
