--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Troop 586 Homepage</title>
-        <meta name="v
-        iewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
@@ -13,7 +12,7 @@
         <header>            
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="./index.html">Home</a>               
+                <a href="./index.html">Home</a>              
                 <a href="photos.html">Photos</a>                
                 <a href="#contact-us">Contact Us</a>           
                 <a href="troop-roster.html">Troop Roster</a>
@@ -77,6 +76,7 @@
                 </iframe>
             </div>    
         </section>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">&#129129;</button>
         <footer>
             <h2>&copy; Glen Luersman 2022</h2>
         </footer>
