fixed symbol compatibility bug on safari

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </iframe>
             </div>    
         </section>
-        <button onclick="topFunction()" id="myBtn" title="Go to top">&#129129;</button>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
         <footer>
             <h2>&copy; Glen Luersman 2022</h2>
         </footer>
