added fix to all pages

--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -30,7 +30,7 @@
       <h2>History Of Soup the Turtle Coming Soon...</h2>
     </div>
   </div>
-  <button onclick="topFunction()" id="myBtn" title="Go to top">&#129129;</button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
   <footer>
     <h2>&copy; Glen Luersman 2022</h2>
 </footer>
