--- a/troop-roster.html
+++ b/troop-roster.html
@@ -43,7 +43,7 @@
         </div>
     </section>
     <div class="cards" id="cards"></div>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">&#129129;</button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
