--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -14,8 +14,9 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./index.html">Home</a>          
         <a href="photos.html">Photos</a>                
-        <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
         <a href="troop-roster.html">Troop Roster</a>
+        <a href="troop-forms.html">Troop Forms</a>
+        <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
     </div>
     <div id="main">
         <span onclick="openNav()">&#9776;</span>
@@ -32,7 +33,8 @@
   </div>
   <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
   <footer>
-    <h2>&copy; Glen Luersman 2022</h2>
+    <h2>Created by:</h2><br>
+    <h2>Glen Luersman 2022</h2>
 </footer>
 <script src="./assets/js/script.js"></script>
 </body>
