--- a/troop-roster.html
+++ b/troop-roster.html
@@ -15,8 +15,9 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./index.html">Home</a>          
         <a href="photos.html">Photos</a>                
-        <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
         <a href="troop-roster.html">Troop Roster</a>
+        <a href="troop-forms.html">Troop Forms</a>
+        <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
         </div>
         <div id="main">
             <a onclick="openNav()">&#9776;</a>
@@ -45,7 +46,8 @@
     <div class="cards" id="cards"></div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
-        <h2>&copy; Glen Luersman 2022</h2>
+        <h2>Created by:</h2><br>
+        <h2>Glen Luersman 2022</h2>
     </footer>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/troop-roster.js"></script>
