added events page

--- a/troop-forms.html
+++ b/troop-forms.html
@@ -13,7 +13,8 @@
     <header>            
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="./index.html">Home</a>          
+        <a href="./index.html">Home</a>
+        <a href="./events.html">Events</a>          
         <a href="photos.html">Photos</a>                
         <a href="troop-roster.html">Troop Roster</a>
         <a href="troop-forms.html">Troop Forms</a>
@@ -45,10 +46,12 @@
                 <h3>Scout Forms</h3>
                 <a href="./assets/docs/duty-roster.pdf">Duty Roster</a>
                 <a href="./assets/docs/meal-planner.pdf">Meal Planner</a>
+                <a href="./assets/docs/04._parol_box_checklist.pdf">Patrol Box Checklist</a>
                 <a href="./assets/docs/Scoutmaster-Conference-Preparation.pdf">Scoutmaster Conference Sheet</a>
             </div>
         </div>
     </section>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
         <h2>Created by:</h2><br>
         <h2>Glen Luersman 2022</h2>
