--- a/mum-festival.html
+++ b/mum-festival.html
@@ -13,7 +13,8 @@
     <header>            
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="./index.html">Home</a>          
+        <a href="./index.html">Home</a>
+        <a href="./events.html">Events</a>          
         <a href="photos.html">Photos</a>                
         <a href="troop-roster.html">Troop Roster</a>
         <a href="troop-forms.html">Troop Forms</a>
