--- a/troop-roster.html
+++ b/troop-roster.html
@@ -20,15 +20,19 @@
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
         </div>
         <div id="main">
-            <a onclick="openNav()">&#9776;</a>
+            <a onclick="openNav()">&#9776; Menu</a>
         </div>
         <div class="header">
-            <h1>Troop 586</h1>
             <a href="./history-of-soup.html" title="History Of Soup">
                 <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
             </a>
         </div>
     </header>
+    <section class="hero">
+        <div>
+            <img src="./assets/images/troop-logo/green-scoutlogo.png" alt="troop 586 logo" class="hero-image">
+        </div>
+    </section>
     <section class="title">
         <h2 class="section-title">Troop Roster</h2>
         <div class="category">
@@ -46,7 +50,7 @@
     <div class="cards" id="cards"></div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
-        <h2>Created by:</h2><br>
+        <h2>Created by:</h2>
         <h2>Glen Luersman 2022</h2>
     </footer>
     <script src="./assets/js/script.js"></script>
