--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
                 <a href="#contact-us">Contact Us</a>           
             </div>
             <div id="main">
-                <span onclick="openNav()">&#9776;</span>
+                <span onclick="openNav()">&#9776; Menu</span>
             </div>
             <div class="header">
-                <h1>Troop 586</h1>
                 <a href="./history-of-soup.html" title="History Of Soup">
                     <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
                 </a>
             </div>
         </header>
         <section class="hero">
-            <div class="hero-image">
-                <h2>New Troop Logo Coming Soon...</h2>
+            <div>
+                <img src="./assets/images/troop-logo/green-scoutlogo.png" alt="troop 586 logo" class="hero-image">
             </div>
             <div class="hero-cta">
                 <h2>Start Building Your<br>
@@ -79,7 +78,7 @@
         </section>
         <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
         <footer>
-            <h2>Created by:</h2><br> 
+            <h2>Created by:</h2>
             <h2>Glen Luersman 2022</h2>
         </footer>
         <script src="./assets/js/script.js"></script>
