patrol box checklist

--- a/troop-forms.html
+++ b/troop-forms.html
@@ -49,6 +49,7 @@
                 <h3>Scout Forms</h3>
                 <a href="./assets/docs/duty-roster.pdf">Duty Roster</a>
                 <a href="./assets/docs/meal-planner.pdf">Meal Planner</a>
+                <a href="./assets/docs/parol_box_checklist.pdf">Patrol Box Checklist</a>
                 <a href="./assets/docs/Scoutmaster-Conference-Preparation.pdf">Scoutmaster Conference Sheet</a>
             </div>
         </div>
