made logo smaller and soup smaller on mobile view

--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -22,10 +22,14 @@
       <span onclick="openNav()">&#9776; Menu</span>
     </div>
     <div class="header">
-      <h1>Troop 586</h1>
       <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
     </div>
-  </header> 
+  </header>
+  <section class="hero">
+    <div>
+        <img src="./assets/images/troop-logo/green_scoutlogo_small.png" alt="troop 586 logo" class="hero-image">
+    </div>
+</section> 
   <div class="history">
     <div class="soup">
       <h2>History Of Soup the Turtle Coming Soon...</h2>
