events page mobile responsive

--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
               </div>
               <a href="http://tecumsehcouncilbsa.org/Camping/CampBirch/">
                 <div class="eventImg">
-                  <img src="./assets/images/Camp-Birch.jpg" alt="camp birch">
+                  <img src="./assets/images/events/Camp-Birch.jpg" alt="camp birch">
                 </div>
               </a>
             </div>
@@ -59,7 +59,7 @@
               </div>
               <a href="https://scoutingevent.com/444-CricketCamp22">
                 <div class="eventImg">
-                  <img src="./assets/images/cricket-holler.png" alt="cricket holler">
+                  <img src="./assets/images/events/cricket-holler.png" alt="cricket holler">
                 </div>
               </a>
             </div>
@@ -72,7 +72,7 @@
               </div>
               <a href="https://miamivalleybsa.org/program/scouting-for-food/">
                 <div class="eventImg">
-                  <img src="./assets/images/scouting-for-food.png" alt="scouting for food">
+                  <img src="./assets/images/events/scouting-for-food.png" alt="scouting for food">
                 </div>
               </a>
             </div>
@@ -85,7 +85,7 @@
               </div>
               <a href="https://www.daytondailynews.com/local/miami-valley-council-boy-scouts-opt-to-close-sell-off-woodland-trails-camp/C7JKU4OQZVEGTJHLVEDAYDJ3FI/">
                 <div class="eventImg">
-                  <img src="./assets/images/woodland-trails.jpg" alt="woodland trails">
+                  <img src="./assets/images/events/woodland-trails.jpg" alt="woodland trails">
                 </div>
               </a>
             </div>
@@ -98,7 +98,7 @@
               </div>
               <a href="https://ohiodnr.gov/go-and-do/plan-a-visit/find-a-property/hueston-woods-state-park">
                 <div class="eventImg">
-                  <img src="./assets/images/hueston-woods.jpg" alt="hueston woods">
+                  <img src="./assets/images/events/hueston-woods.jpg" alt="hueston woods">
                 </div>
               </a>
             </div>
@@ -111,7 +111,7 @@
               </div>
               <a href="http://danbeard.org/camping/camp-friedlander-centennial/">
                 <div class="eventImg">
-                  <img src="./assets/images/friedlander.jpg" alt="camp friedlander">
+                  <img src="./assets/images/events/friedlander.jpg" alt="camp friedlander">
                 </div>
               </a>
             </div>
@@ -124,7 +124,7 @@
               </div>
               <a href="https://www.birchbarkcanoelivery.com/">
                 <div class="eventImg">
-                  <img src="./assets/images/canoe.jpg" alt="canoe">
+                  <img src="./assets/images/events/canoe.jpg" alt="canoe">
                 </div>
               </a>
             </div>
@@ -137,7 +137,7 @@
               </div>
               <a href="https://www.mattlight72.com/about-chenoweth-trails/">
                 <div class="eventImg">
-                  <img src="./assets/images/chenoweth.jpg" alt="chenoweth trails">
+                  <img src="./assets/images/events/chenoweth.jpg" alt="chenoweth trails">
                 </div>
               </a>
             </div>
@@ -150,7 +150,7 @@
               </div>
               <a href="https://tippmumfestival.org/">
                 <div class="eventImg">
-                  <img src="./assets/images/mum.jpg" alt="mum">
+                  <img src="./assets/images/events/mum.jpg" alt="mum">
                 </div>
               </a>
             </div>
@@ -163,20 +163,20 @@
               </div>
               <a href="http://www.blackswampbsa.org/camping/camp-berry/63302">
                 <div class="eventImg">
-                  <img src="./assets/images/camp-berry.jpg" alt="camp berry">
+                  <img src="./assets/images/events/camp-berry.jpg" alt="camp berry">
                 </div>
               </a>
             </div>
             <div class="left">
               <div class="content">
                 <h3>November</h3>
-                <h4>Turkey Bowl/Redmen's Lodge</h4>
+                <h4>Turkey Bowl/Redmans Picnic Grounds</h4>
                 <p>At this campout the boys cook up a thanksgiving fest for all the families.</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
-              <a href="https://www.yelp.com/biz/redmens-lodge-troy">
+              <a href="https://m.facebook.com/profile.php?id=559276214114138">
                 <div class="eventImg">
-                  <img src="./assets/images/redmens.jpg" alt="redmen's lodge">
+                  <img src="./assets/images/events/redmans.jpg" alt="redmen's lodge">
                 </div>
               </a>
             </div>
@@ -189,7 +189,7 @@
               </div>
               <a href="">
                 <div class="eventImg">
-                  <img src="./assets/images/cricket-holler.png" alt="cricket holler">
+                  <img src="./assets/images/events/cricket-holler.png" alt="cricket holler">
                 </div>
               </a>
             </div>
