--- a/events.html
+++ b/events.html
@@ -20,15 +20,19 @@
                 <a href="#contact-us">Contact Us</a>           
             </div>
             <div id="main">
-                <span onclick="openNav()">&#9776;</span>
+                <span onclick="openNav()">&#9776; Menu</span>
             </div>
             <div class="header">
-                <h1>Troop 586</h1>
-                <a href="./history-of-soup.html" title="History Of Soup">
-                    <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
-                </a>
+              <a href="./history-of-soup.html" title="History Of Soup">
+                <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
+              </a>
             </div>
         </header>
+        <section class="hero">
+          <div>
+              <img src="./assets/images/troop-logo/green_scoutlogo_small.png" alt="troop 586 logo" class="hero-image">
+          </div>
+        </section>
         <section class="title">
           <h2 class="section-title">Events</h2>
         </section>
