style edits to events page

--- a/events.html
+++ b/events.html
@@ -22,6 +22,9 @@
             <div id="main">
                 <span onclick="openNav()">&#9776; Menu</span>
             </div>
+            <div class="flag">
+              <h1>Be Prepared</h1>
+            </div>
             <div class="header">
               <a href="./history-of-soup.html" title="History Of Soup">
                 <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
@@ -45,7 +48,7 @@
               <div class="content">
                 <h3>January</h3>
                 <h4>Winter Bushwhack/Camp Birch</h4>
-                <p>At this campout the scouts went on a 8 mile hike.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos(wb22)">Click here to see photos</a>
               </div>
               <a href="http://tecumsehcouncilbsa.org/Camping/CampBirch/">
@@ -58,10 +61,10 @@
               <div class="content">
                 <h3>February</h3>
                 <h4>Real Life First Aid/Cricket Holler</h4>
-                <p>This campout is for the boys to experience and learn to properly assess and treat real life injuries.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos(rlfa22)">Click here to see photos</a>
               </div>
-              <a href="https://scoutingevent.com/444-CricketCamp22">
+              <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
                 <div class="eventImg">
                   <img src="./assets/images/events/cricket-holler.png" alt="cricket holler">
                 </div>
@@ -71,7 +74,7 @@
               <div class="content">
                 <h3>March</h3>
                 <h4>Scouting for Food/Tipp City</h4>
-                <p>This is one of the 2 months that we do not have a campout. Scouting for Food takes up 2 Saturdays and brings in a lot of food for those in need.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://miamivalleybsa.org/program/scouting-for-food/">
@@ -84,7 +87,7 @@
               <div class="content">
                 <h3>April</h3>
                 <h4>Fish and Wildlife Management/Woodland Trails</h4>
-                <p>I have no idea what the boys did on this campout.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos(fwlm22)">Click here to see photos</a>
               </div>
               <a href="https://www.daytondailynews.com/local/miami-valley-council-boy-scouts-opt-to-close-sell-off-woodland-trails-camp/C7JKU4OQZVEGTJHLVEDAYDJ3FI/">
@@ -97,7 +100,7 @@
               <div class="content">
                 <h3>May</h3>
                 <h4>Cycling/Hueston Woods</h4>
-                <p>The boys will be doing a 15 mile bike ride.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://ohiodnr.gov/go-and-do/plan-a-visit/find-a-property/hueston-woods-state-park">
@@ -110,7 +113,7 @@
               <div class="content">
                 <h3>June</h3>
                 <h4>Summer Camp/Camp Friedlander</h4>
-                <p>This is the BIG event of the year. The boys spend a week camping,working on merit badges, and building character.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="http://danbeard.org/camping/camp-friedlander-centennial/">
@@ -123,7 +126,7 @@
               <div class="content">
                 <h3>July</h3>
                 <h4>Paddle Sports/Camp Birch</h4>
-                <p>This campout the boys will take a canoe trip down the river.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://www.birchbarkcanoelivery.com/">
@@ -136,7 +139,7 @@
               <div class="content">
                 <h3>August</h3>
                 <h4>Fishing/Chenoweth Trails</h4>
-                <p>This is one of the troops favorite places to camp. Chenoweth Trails is very luxurious and also a great place to fish (I mean there are no fish here 😉).</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://www.mattlight72.com/about-chenoweth-trails/">
@@ -149,7 +152,7 @@
               <div class="content">
                 <h3>September</h3>
                 <h4>Mumfest/Tipp City</h4>
-                <p>Mumfest is our BIG fundraiser. The boys spend close to 2 months selling and painting mums on driveways and sidewalks. The money earned is used to pay for campouts and summer camp.</p>
+                <!-- <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p> -->
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://tippmumfestival.org/">
@@ -162,7 +165,7 @@
               <div class="content">
                 <h3>October</h3>
                 <h4>Shooting Sports/Camp Berry</h4>
-                <p>I'm guessing there is some shooting involved</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="http://www.blackswampbsa.org/camping/camp-berry/63302">
@@ -175,7 +178,7 @@
               <div class="content">
                 <h3>November</h3>
                 <h4>Turkey Bowl/Redmans Picnic Grounds</h4>
-                <p>At this campout the boys cook up a thanksgiving fest for all the families.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://m.facebook.com/profile.php?id=559276214114138">
@@ -188,10 +191,10 @@
               <div class="content">
                 <h3>December</h3>
                 <h4>Yearly Planning/Cricket Holler</h4>
-                <p>This campout is spent planning the entire next year.</p>
+                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
-              <a href="">
+              <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
                 <div class="eventImg">
                   <img src="./assets/images/events/cricket-holler.png" alt="cricket holler">
                 </div>
