--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -22,6 +22,9 @@
     <div id="main">
       <span onclick="openNav()">&#9776; Menu</span>
     </div>
+    <div>
+      <h1>Be Prepared</h1>
+  </div>
     <div class="header">
       <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
     </div>
