--- a/mum-festival.html
+++ b/mum-festival.html
@@ -23,6 +23,9 @@
         <div id="main">
             <span onclick="openNav()">&#9776; Menu</span>
         </div>
+        <div>
+            <h1>Be Prepared</h1>
+        </div>
         <div class="header">
             <a href="./history-of-soup.html" title="History Of Soup">
                 <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
