added history of soup the turtle and Be Prepared heading

--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -22,15 +22,28 @@
       <span onclick="openNav()">&#9776; Menu</span>
     </div>
     <div class="header">
-      <h1>Troop 586</h1>
+      <h1>Be Prepared</h1>
       <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
     </div>
-  </header> 
-  <div class="history">
-    <div class="soup">
-      <h2>History Of Soup the Turtle Coming Soon...</h2>
+  </header>
+  <section class="hero">
+    <div>
+      <h1>Be Prepared</h1>
     </div>
-  </div>
+    <div>
+        <img src="./assets/images/troop-logo/green-scoutlogo.png" alt="troop 586 logo" class="hero-image">
+    </div>
+  </section> 
+  <section class="title">
+    <h2 class="section-title">History of Soup the Turtle</h2>
+  </section>
+  <section class="history">
+    <div>
+      <p>The troop's original scoutmaster had an interesting policy designed to keep the scouts from harming nature. "If you kill it, you eat it." I don't know why this rule came to be, but it was widely repeated when you joined our troop on an adventure.</p><br>
+      <p>At one particular campout, our scoutmaster was backing the troop trailer up into position and accidently ran over a turtle. Upon seeing this, the youths all began repeating our troop rule to said scoutmaster. Now our original scoutmaster is a Vietnam Veteran, and had on several occasions told our troop about making turtle soup to survive in the jungles of Vietnam, so it was suggested he do the same with the recently deceased turtle. He did. The boys loved it.</p><br>
+      <p>From then on, it became a tradition that our scoutmaster would make turtle soup at every December campout. And our mascot, "Soup" was born.</p>
+    </div>
+  </section>
   <div id="dancing-turtle" class="turtle">
     <img src="./assets/images/dancing-turtle.gif" alt="dancing turtle">
   </div>
