--- a/photos.html
+++ b/photos.html
@@ -24,12 +24,16 @@
             <span onclick="openNav()">&#9776; Menu</span>
         </div>
         <div class="header">
+            <h1>Be Prepared</h1>
             <a href="./history-of-soup.html" title="History Of Soup">
                 <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
             </a>
         </div>
     </header>
     <section class="hero">
+        <div>
+            <h1>Be Prepared</h1>
+        </div>
         <div>
             <img src="./assets/images/troop-logo/green-scoutlogo.png" alt="troop 586 logo" class="hero-image">
         </div>
